--- a/Webpage/Frontend/index.html
+++ b/Webpage/Frontend/index.html
@@ -92,7 +92,9 @@
 
         // Function to fetch the location data from the backend
         function fetchLocationData() {
-            fetch('https://gps-tracker-esp8266.onrender.com/location')
+            // fetch('https://gps-tracker-esp8266.onrender.com/location')
+            fetch('http://localhost:3000/location')
+
                 .then(response => response.json())
                 .then(data => {
                     const { latitude, longitude, altitude, speed, time } = data;
